# libcdio-paranoia

./: .editorconfig  .gitignore  .travis.yml  AUTHORS  COPYING  COPYING-GPL  COPYING-LGPL  ChangeLog-spell-corrected.diff  INSTALL  INSTALL.md  Makefile.am  NEWS  NEWS.md  README  README.md  THANKS  autogen.sh  circle.yml  configure.ac  libcdio_cdda.pc.in  libcdio_paranoia.pc.in  make-check-filter.rb
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: lint.yml  linux.yml
admin-tools/: upload-to-ftp-gnu-org.sh
doc/: Makefile.am  how-to-make-a-release.txt
doc/doxygen/: .gitignore  Doxyfile.in
doc/en/: .gitignore  Makefile.am  cd-paranoia.1.in
doc/ja/: Makefile.am  cd-paranoia.1.in
example/: .gitignore  Makefile.am  README  paranoia.c  paranoia2.c
example/C++/: .gitignore  Makefile.am  paranoia.cpp  paranoia2.cpp
include/: Makefile.am
include/cdio/: Makefile.am  cdda.h  paranoia.h
include/cdio/paranoia/: .gitignore  Makefile.am  cdda.h  paranoia.h  toc.h  version.h.in
lib/: Makefile.am
lib/cdda_interface/: .gitignore  Makefile.am  cddap_interface.c  common_interface.c  common_interface.h  drive_exceptions.c  drive_exceptions.h  interface.c  libcdio_cdda.sym  low_interface.h  scan_devices.c  scsi_interface.c  smallft.c  smallft.h  test_interface.c  toc.c  utils.c  utils.h
lib/paranoia/: .gitignore  Makefile.am  gap.c  gap.h  isort.c  isort.h  libcdio_paranoia.sym  overlap.c  overlap.h  p_block.c  p_block.h  paranoia.c
m4/: .gitignore
src/: .gitignore  Makefile.am  buffering_write.c  buffering_write.h  cachetest.c  cachetest.h  cd-paranoia.c  getopt.c  getopt.h  getopt1.c  getopt_int.h  header.c  header.h  pod2c.pl  report.c  report.h  usage-copy.h  usage.txt.in  utils.h  version.h
test/: .gitignore  Makefile.am  check_paranoia.sh.in  check_start_track_not_one.sh  check_start_track_not_one.sh.in  endian.sh.in  get_libcdio_version.c  start_track_not_one.sh.in  testparanoia.c  teststarttrack.c  testutils  testutils.c
test/cdda_interface/: .gitignore  Makefile.am  toc.c.in
test/data/: .gitignore  Makefile.am  cd-extra.cue  cdda2.cue  hidden-track.cue  mixed-mode-cd.cue
