########################################################
# Things to make the install (public) libcdio-paranoia headers
########################################################
#

libcdioincludedir=$(includedir)/cdio
dist_libcdioinclude_HEADERS = cdda.h paranoia.h 

EXTRA_DIST = version.h.in
BUILT_SOURCES = version.h
