########################################################
# Things to make the install (public) libcdio-paranoia headers
########################################################
#

cdio_paranoia_includedir=$(includedir)/cdio/paranoia
dist_cdio_paranoia_include_HEADERS = cdda.h paranoia.h 

EXTRA_DIST = version.h.in
BUILT_SOURCES = version.h
